<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@color/bg_color"
    android:orientation="vertical">


    <TextView
        android:id="@+id/lblPreviousReading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/prevRead"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/etPreviousReading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/prev"
        android:textAppearance="?android:textAppearanceLarge" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/curRead"
        android:textAppearance="?android:textAppearanceMedium" />

    <EditText
        android:id="@+id/etCurrentReading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:background="@drawable/edittext_box"
        android:gravity="center"
        android:inputType="number|numberDecimal"
        android:textAppearance="?android:textAppearanceLarge" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPrintReading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_v2"
            android:gravity="center"
            android:text="@string/printreading"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnGenerate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_v2"
            android:gravity="center"
            android:text="@string/genbill"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/white" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_v2"
            android:gravity="center"
            android:text="@string/save"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_v2"
            android:gravity="center"
            android:text="@string/Cancel"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>