<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etOldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/edittext_box"
        android:hint="@string/oldPassword"
        android:inputType="textPassword"
        android:padding="5dp" />

    <CheckBox
        android:id="@+id/cbOldShowPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_pwd" />

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/edittext_box"
        android:hint="@string/newPassword"
        android:inputType="textPassword"
        android:padding="5dp" />

    <CheckBox
        android:id="@+id/cbNewShowPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_pwd" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/edittext_box"
        android:inputType="textPassword"
        android:padding="5dp" />

    <CheckBox
        android:id="@+id/cbConfirmShowPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_pwd" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOK"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/button_v2"
            android:gravity="center"
            android:text="@string/Ok"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/button_v2"
            android:gravity="center"
            android:text="@string/Cancel"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>