<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@color/bg_color"
    android:orientation="vertical">


    <TextView
        android:id="@+id/txtEditReadingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="This meter has been read, do you want to edit the reading or remarks?"
        android:textAppearance="?android:textAppearanceMedium"
        android:visibility="gone"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnEditReading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_v2"
            android:gravity="center"
            android:text="@string/editreading"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/white"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnEditRemarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_v2"
            android:gravity="center"
            android:text="@string/editremarks"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/white"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPrintBill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_v2"
            android:gravity="center"
            android:text="@string/printbill"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/white"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnPrintNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_v2"
            android:gravity="center"
            android:text="@string/printNotification"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/white"
            android:visibility="gone"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnVoid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_v2"
            android:gravity="center"
            android:text="@string/Void"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/white"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnUnVoid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_v2"
            android:gravity="center"
            android:text="@string/unVoid"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/white"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_v2"
            android:gravity="center"
            android:text="@string/Cancel"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>